Remove site-header ID to fix alignment

--- a/css/base.css
+++ b/css/base.css
@@ -127,3 +127,16 @@ dt div {
 .pager--item-text {
     margin: 0 8px;
 }
+
+.minimal-header-container {
+    background-color: #005a9c;
+    background-color: var(--w3c-classic);
+    color: #fff;
+    color: var(--pure-white);
+}
+.minimal-header-logo > a {
+    display: flex;
+}
+.minimal-header-name > a {
+    color: inherit;
+}
